syntax = "proto3";
package consolechat;

// For an empty response.
import "google/protobuf/empty.proto";
option go_package = "consolechat.grpc";

service ChatService {
    // Unary request to connect to the service.
    rpc Connect (ConnectRequest) returns (google.protobuf.Empty);

    // Bidirectional stream for chatting.
    rpc ConsoleChat (Message) returns (google.protobuf.Empty);

    // Unary request to return users connected.
    rpc ListUsers (google.protobuf.Empty) returns (UserList);

    // Unary request to kill the connection.
    rpc Disconnect (DisconnectRequest) returns (google.protobuf.Empty);
}


message ConnectRequest {
    string user = 1;
}

message DisconnectRequest {
    string user = 1;
}

message UserList {
    repeated string user = 1;
}

message Message {
    string user = 1;
    string speak = 2;
}
